--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -20,6 +20,20 @@ jobs:
       with:
         name: mainApp
         path: mainApp
+
+  test:
+
+    runs-on: windows-latest
+
+    steps:
+    - uses: actions/checkout@v4
+    - name: configure
+      run: gcc main.c functions.c -o mainApp
+    - name: Upload binary
+      uses: actions/upload-artifact@v4
+      with:
+        name: mainApp
+        path: mainApp
    # - name: make
    #   run: make
    # - name: make check
