--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -18,8 +18,10 @@ jobs:
     - name: Upload binary
       uses: actions/upload-artifact@v4
       with:
-        name: mainApp
-        path: mainApp
+        name: Biuld-Artifact
+        path: ${{github.workspace}}
+      #  name: mainApp
+      #  path: mainApp
 
   test:
 
