--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -35,7 +35,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: mainApp
-        path: mainApp
+        path: mainApp.exe
    # - name: make
    #   run: make
    # - name: make check
