--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -26,7 +26,7 @@ jobs:
   test:
 
     runs-on: windows-latest
-    need: build
+    needs: build
     steps:
     - uses: actions/checkout@v4
     - name: configure
